Add http backend data

--- a/src/main/client/src/app/app.component.html
+++ b/src/main/client/src/app/app.component.html
@@ -3,5 +3,9 @@
   <h1>
     Welcome {{title}}!
   </h1>
+  <div class="container">
+    <p>ID: <span>{{data.id}}</span></p>
+    <p>Message: <span>{{data.content}}</span></p>
+  </div>
 </div>
 
