Tweak scripts to run from main dir

--- a/src/main/client/src/app/app.component.html
+++ b/src/main/client/src/app/app.component.html
@@ -4,7 +4,7 @@
     Welcome {{title}}!
   </h1>
   <div class="container">
-    <p>ID: <span>{{data.id}}</span></p>
+    <p>Id: <span>{{data.id}}</span></p>
     <p>Message: <span>{{data.content}}</span></p>
   </div>
 </div>
