Fill out README a bit

--- a/src/main/client/src/app/app.component.html
+++ b/src/main/client/src/app/app.component.html
@@ -1,5 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center"class="container">
   <h1>
     Welcome {{title}}!
   </h1>
