Use [] in template to avoid vscode errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
     Welcome {{title}}!
   </h1>
   <div class="container">
-    <p>Id: <span>{{data.id}}</span></p>
-    <p>Message: <span>{{data.content}}</span></p>
+    <p>Id: <span>{{data['id']}}</span></p>
+    <p>Message: <span>{{data['content']}}</span></p>
   </div>
 </div>
 
