Get tests working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
   </h1>
   <div class="container">
     <p>Id: <span>{{data.id}}</span></p>
-    <p>Message: <span>{{data.content}}</span></p>
+    <p class="content">Message: <span>{{data.content}}</span></p>
   </div>
 </div>
